@@ -95,8 +95,8 @@ public class ChannelDirectTCPIP extends Channel{
   public void run(){
     thread=this;
 //System.out.println("rmpsize: "+rmpsize+", lmpsize: "+lmpsize);
-//    Buffer buf=new Buffer(rmpsize);
-    Buffer buf=new Buffer(lmpsize);
+    Buffer buf=new Buffer(rmpsize);
+//    Buffer buf=new Buffer(lmpsize);
     Packet packet=new Packet(buf);
     int i=0;
     try{
